minor bug fixes and toggable dark mode feature added

--- a/main.css
+++ b/main.css
@@ -1,24 +1,204 @@
-*{
-    margin: 0;
-    border: 0;
-    font-family: 'Space Mono', monospace;
-}
-body{
-    background-color:#F6F8FF;
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+* {
+  margin: 0;
+  border: 0;
+  font-family: "Space Mono", monospace;
 }
 
-h1{
-    font-size: 26px;
-    line-height: 39px;
-    display: inline-block;
+a{
+  text-decoration: none;
 }
 
-h2{
-    display: inline-block;
+#header {
+  width: 730px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+
+.searchBox{
+  margin-bottom: 24px;
+  width: 730px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border-radius: 15px;
+  background-color: white;
+}
+
+body {
+  background-color: #f6f8ff;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  font-size: 26px;
+  line-height: 39px;
+  display: inline-block;
+}
+
+h2 {
+  display: inline-block;
+  font-weight: bold;
+  color: #697c9a;
+  font-size: 13px;
+  line-height: 19px;
+  text-align: right;
+  letter-spacing: 2.5px;
+}
+
+#mode{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+#modeIcon{
+  padding:9px 0px 9px 16px;
+}
+
+.userCard {
+  background-color: white;
+  width: 730px;
+  height: 419px;
+  border-radius: 15px;
+}
+
+.details {
+  display: grid;
+  grid-template-columns: 160px 160px 160px;
+  background-color: #f6f8ff;
+  border-radius: 10px;
+}
+
+#contentContainer {
+  padding: 48px;
+  display: flex;
+  flex-direction: row;
+  column-gap: 37px;
+}
+
+#Name {
+  color: #2b3442;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 39px;
+}
+
+.nameHolder {
+  display: flex;
+  flex-direction: row;
+  column-gap: 100px;
+}
+
+#joinDate {
+  color: #697c9a;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 22px;
+  text-align: center;
+  padding-top: 8px;
+}
+
+#userProfile {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  color: #0079ff;
+}
+
+#bio {
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 25px;
+  color: #4b6a9b;
+  mix-blend-mode: normal;
+  opacity: 0.75;
+  padding-top: 20px;
+}
+
+#repos {
+  padding-left: 32px;
+  padding-top: 15px;
+  padding-bottom: 17px;
+}
+
+.count {
+  color: #2b3442;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 33px;
+}
+
+#header{
+  padding-bottom: 36px;
+}
+.countName {
+  color: #4b6a9b;
+}
+
+.vals {
+  padding-top: 15px;
+  padding-bottom: 17px;
+}
+
+#detail {
+  display: grid;
+  grid-template-columns: 240px 240px;
+  padding-top: 37px;
+}
+
+#searchIcon {
+  height: 24px;
+  padding: 23px 24px 0px 32px;
+}
+
+.searchBar {
+  height: 69px;
+  color: #4B6A9B;
+  border: none;
+  outline: none;
+  flex-grow: 1;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 25px;
+}
+
+#avatar {
+  width: 117px;
+  height: 117px;
+  border-radius: 50%;
+}
+
+#searchButton{
+  background-color: #0079FF;
+  color: white;
+  margin: 9.5px 10px 9.5px 0px;
+  padding: 13px 23px;
+  border-radius: 10px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.darkMode{
+  background-color: #141D2F;
+}
+
+.darkModeContrast{
+  background-color: #1E2A47;
+}
+
+@media (max-width:740px) {
+  .userCard{
+    width: 100px;
+  }
 }
